--- a/vignettes/flashier_single_cell.Rmd
+++ b/vignettes/flashier_single_cell.Rmd
@@ -124,15 +124,15 @@ s1 <- sd(log(x + 1))
 Fit a flashier model
 --------------------
 
-Now we can call `flash` to fit a flashier model to the transformed
+Now we can call flash to fit a flashier model to the transformed
 data:
 
-```{r, eval=FALSE}
+```{r flash}
 fit <- flash(shifted_log_counts,ebnm_fn = ebnm_point_exponential,
-             var_type = 2,greedy_Kmax = 20,S = s1)
+             var_type = 2,greedy_Kmax = 8,S = s1)
 ```
 
-A few notes about this `flash` call:
+A few notes about this flash call:
 
 + `ebnm_fn = ebnm_point_exponential` forces both the L and F
   matrices in flashier to be non-negative, so this call will generate
@@ -150,102 +150,89 @@ A few notes about this `flash` call:
 Scaling the membership and factor matrices
 ------------------------------------------
 
-The loading and factor matrix pair are unique up to a scaling. We may desire to normalize the loading matrix such that for each factor, the maximum loading value is 1. We should also scale the factor matrix accordingly.  
-```{r, eval=FALSE}
-L.scaled <- t(t(fit.nn$L_pm)/apply(fit.nn$L_pm,2, max))
-F.scaled <- t(t(fit.nn$F_pm)*apply(fit.nn$L_pm,2, max))
+The loading and factor matrix pair are unique up to a scaling. We may
+desire to normalize the loading matrix such that for each factor, the
+maximum loading value is 1. We should also scale the factor matrix
+accordingly.
+
+```{r ldf}
+res <- ldf(fit,type = "i")
 ```
   
-These scaled versions are particularly helpful for visualizations.  
+These scaled versions are particularly helpful for visualizations.
 
-Looking at memberships
---------------------
-For a flashier fit with $K$ factors, each cell $i$ is represented as a convex combination of these factors. For each cell, we have $K$ factor membership levels -- they are all stored in the $n \times K$ loading matrix. These proportions are learned from the data.  
+Looking at membership matrix
+----------------------------
+
+For a flashier fit with $K$ factors, each cell $i$ is represented as a
+convex combination of these factors. For each cell, we have $K$ factor
+membership levels -- they are all stored in the $n \times K$ loading
+matrix. These proportions are learned from the data.
   
 Here are some examples:
-```{r, eval=FALSE}
+
+```{r}
 rows <- c("GATATATGTCAGTG-1-b_cells",
           "GACAGTACCTGTGA-1-memory_t",
           "TGAAGCACACAGCT-1-b_cells")
-round(fit.nn$L_pm[rows,],digits = 3)
+round(res$L[rows,],digits = 3)
 ```
     
-We can see that the sample `GATATATGTCAGTG-1-b_cells` primarily shows membership in factors 1 and 6, with very small levels of membership in factors 5 and 9. Meanwhile, the sample `GACAGTACCTGTGA-1-memory_t` primarily shows membership in factors 1 and 5, with very small membership in factor 14.  
+We can see that the sample `GATATATGTCAGTG-1-b_cells` primarily shows
+membership in factors 1 and 6, with very small levels of membership in
+factors 5 and 9. Meanwhile, the sample `GACAGTACCTGTGA-1-memory_t`
+primarily shows membership in factors 1 and 5, with very small
+membership in factor 14.
 
 Interpreting factors using available cell labels
---------------------
-In the PBMC data, in addition to gene expression data, we have cell labels. Each cell is assigned to one of five labels (each corresponding to a cell type): B cells, CD14+ monocytes, CD3+ cells, natural killer (NK) cells, and T cells. This additional information can be used to help interpret our factors.  
-```{r, eval=FALSE}
-samples <- pbmc_facs$samples
-summary(samples$subpop)
+------------------------------------------------
+
+In the PBMC data, in addition to gene expression data, we have cell
+labels. Each cell is assigned to one of five labels (each
+corresponding to a cell type): B cells, CD14+ monocytes, CD3+ cells,
+natural killer (NK) cells, and T cells. This additional information
+can be used to help interpret our factors.
+
+```{r}
+summary(pbmc_facs$samples$subpop)
 ```
     
-We can visualize the loadings using a structure plot. A structure plot is a stacked bar plot in which each factor is represented as a bar of a different color, and the bar heights are membership levels. This plot can help visualize the relationship between cell labels and factor membership levels.  
+We can visualize the loadings using a structure plot. A structure plot
+is a stacked bar plot in which each factor is represented as a bar of
+a different color, and the bar heights are membership levels. This
+plot can help visualize the relationship between cell labels and
+factor membership levels.
   
-For this structure plot, we visualize the scaled loadings from earlier.
+For this structure plot, we visualize the scaled loadings from
+earlier.
 
-```{r, eval=FALSE}
-structure_plot_general = function(Lhat,Fhat,grouping,title=NULL, loadings_order = 'embed', print_plot=FALSE, seed=12345, n_samples = NULL, gap=40, show_legend=TRUE, K = NULL){
-  set.seed(seed)
-
-  #if not told to plot all samples, then plot a sub-sample
-  if(is.null(n_samples)&all(loadings_order == "embed")){
-    n_samples = 2000
-  }
-
-  #normalize L such that each factor has a maximum loading value of 1
-  #results in an error if all the entries of a column are 0
-  Lhat = apply(Lhat,2,function(z){z/max(max(z),1)})
-  
-  #if not told to plot all factors, then plot the requested subset
-  if(!is.null(K)){
-    Lhat = Lhat[,1:K]
-    Fhat = Fhat[,1:K]
-  }
-  
-  Fhat = matrix(1,nrow=3,ncol=ncol(Lhat))
-  
-  #add column names to Lhat if it doesn't have column names
-  if(is.null(colnames(Lhat))){
-    colnames(Lhat) <- paste0("k",1:ncol(Lhat))
-  }
-  
-  #define multinom_topic_model_fit for structure plot function
-  fit_list <- list(L = Lhat,F = Fhat)
-  class(fit_list) <- c("multinom_topic_model_fit", "list")
-  
-  #plot
-  p <- fastTopics::structure_plot(fit_list,grouping = grouping, loadings_order = loadings_order, n = n_samples, colors = rainbow(ncol(Lhat)), gap = gap,verbose=F) + labs(y = "loading",color = "dim",fill = "dim") + ggtitle(title)
-  if(!show_legend){
-    p <- p + theme(legend.position="none")
-  }
-  if(print_plot){
-    print(p)
-  }
-  return(p)
+```{r, fig.height=2, fig.width=7.5, results="hide", message=FALSE}
+flashier_structure_plot <- function (ldf, grouping) {
+  class(ldf) <- c("multinom_topic_model_fit","list")
+  return(structure_plot(ldf,grouping = grouping,gap = 20) +
+         labs(y = "membership",color = "factor",fill = "factor"))
 }
-```
-
-```{r, eval=FALSE}
-structure_plot_general(L.scaled, F.scaled, grouping = samples$subpop, n_samples = nrow(L.scaled))
+flashier_structure_plot(res,pbmc_facs$samples$subpop)
 ```
   
 We can see that the first factor is somewhat equally present in all cell types. (The first factor is often interpreted as an intercept factor). To focus on the differences between cell types, we can take that factor out of our visualization.
 
-```{r, eval=FALSE}
-F0 <- F.scaled
-L0 <- L.scaled
-F0[,1] <- 0
-L0[,1] <- 0
-structure_plot_general(L0, F0, grouping = samples$subpop, n_samples = nrow(L0))
+```{r, fig.height=2, fig.width=7.5, results="hide", message=FALSE}
+res1 <- res
+res1$L[,1] <- 0
+res1$F[,1] <- 0
+flashier_structure_plot(res1,pbmc_facs$samples$subpop)
 ```
   
-From the structure plot, we can see that NK cells, B cells, CD14+ cells, and T cells have high membership levels in factors 2, 6, 3, and 5, respectively.  
+From the structure plot, we can see that NK cells, B cells, CD14+
+cells, and T cells have high membership levels in factors 2, 6, 3, and
+5, respectively.
   
-We can also visualize the loadings with a heatmap. A heatmap visualizes the matrix of loading values, and a more saturated color corresponds to a higher value. Again, we use the scaled loadings.
+We can also visualize the loadings with a heatmap. A heatmap
+visualizes the matrix of loading values, and a more saturated color
+corresponds to a higher value. Again, we use the scaled loadings.
 
-```{r, eval=FALSE}
-#code for heatmap
+```{r}
 loadings_heatmap <- function(fit_L, grouping, sample.names, grouping_col, subjects_subset = NULL){
   if (is.null(subjects_subset) == FALSE){
     anno <- data.frame(subpop = grouping[(subjects_subset)])
@@ -272,21 +259,30 @@ loadings_heatmap <- function(fit_L, grouping, sample.names, grouping_col, subjec
 }
 ```
 
-```{r, eval=FALSE}
-#plot heatmap
+```{r, fig.height=6, fig.width=6, eval=FALSE}
 grouping_col <- rainbow(5)
 names(grouping_col) <- levels(samples$subpop)
 colnames(L.scaled) <- paste0('k',c(1:ncol(L.scaled)))
 loadings_heatmap(fit_L = L.scaled, grouping = samples$subpop, sample.names = rownames(L.scaled), grouping_col)
 ```
   
-From the heatmap, we see that almost all samples have membership in factor 1, supporting the interpretation of the first factor as an 'intercept factor'. We also see that the loadings of factors 2, 4, 5, and 6 generally correspond with NK cells, CD34+ cells, T cells, and B cells, respectively.  
+From the heatmap, we see that almost all samples have membership in
+factor 1, supporting the interpretation of the first factor as an
+'intercept factor'. We also see that the loadings of factors 2, 4, 5,
+and 6 generally correspond with NK cells, CD34+ cells, T cells, and B
+cells, respectively.
 
 Factors capture patterns of relative expression
---------------------
-Each factor is represented as a vector of $m$ expression levels (one for each gene). All of the factors are stored in an $m \times K$ matrix. The entries of this matrix approximately represent the log-fold change (LFC) of a given gene in a given factor.  
+-----------------------------------------------
+
+Each factor is represented as a vector of $m$ expression levels (one
+for each gene). All of the factors are stored in an $m \times K$
+matrix. The entries of this matrix approximately represent the
+log-fold change (LFC) of a given gene in a given factor.
     
-For the scaled factor matrix, the entries can be interpreted as the log-fold-change of a given gene in a given factor if a sample has a membership level of 1 for that factor.    
+For the scaled factor matrix, the entries can be interpreted as the
+log-fold-change of a given gene in a given factor if a sample has a
+membership level of 1 for that factor.
 
 ```{r, eval=FALSE}
 dim(fit.nn$F_pm)
